# the_macavei_post

./: Cargo.toml  LICENSE.txt  README.md  index.html  style.css
src/: auth.rs  contact.rs  main.rs  router.rs
src/pages/: about.rs  books.rs  contact.rs  email.rs  home.rs  music.rs  photos.rs  quotes.rs
static/: about.html  book_content.html  books.html  contact_form.html  login.html  music.html  photos.html  posts.html  quotes.html  thank_you.html
static/css/: style.css
