[package]
name = "the_macavei_post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

actix-web="3"
actix-files="0.4.0"
serde_json = "1.0.53"
handlebars = { version = "4.1.4", features = ["dir_source"] }
 