[package]
name = "the_macavei_post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

serde = { version = "1.0.83", features = ["derive"]}
actix-web="4"
actix-session = "0.7"
actix-identity = "0.6"
actix-files="0.6.2"
serde_json = "1.0.83"
handlebars = { version = "4.3.3", features = ["dir_source"] }
lettre= "0.10"
tokio = { version = "1", features = ["full"]}