[package]
name = "the_macavei_post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


serde = { version = "1.0.83", features = ["derive"]}
actix-web="4"
actix-session = "0.7"
actix-identity = "0.5"
actix-files="0.6.2"
serde_json = "1.0.83"
handlebars = { version = "4.3.3", features = ["dir_source"] }
lettre= "0.10"
tokio = { version = "1", features = ["full"]}
env_logger = "0.8"
bcrypt = "0.10"
# sqlx = "0.5"